# allele-ai

./: .codespellignore  .env.example  .gitignore  AGENTS.md  AGENTS_GUIDELINES.md  CLEANUP_SUMMARY.md  CODE_OF_CONDUCT.md  COMMERCIAL_LICENSE.txt  CONTRIBUTING.md  IMPLEMENTATION.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LLM_BENCHMARK_ANALYSIS.md  MATRIX_EVALUATION_FINDINGS.md  ML_ANALYTICS_VALIDATION_REPORT.md  PHASE3_COMPLETION_TASKS.md  PHASE4_MLFLOW_SPEC.md  PR_DESCRIPTION.md  README.md  README.md.old  REDDIT_HN_LAUNCH_POST.md  REMOTE_RELEASE_ANALYSIS.md  REPOSITORY_ORGANIZATION.md  SHIP_IT_TONIGHT.md  TECH_DEBT_PHASE2.md  VERIFICATION_REPORT.md  c  debug_evolve.py  fix_generation.py  generate_graphs.py  immediate_actions.md  mkdocs.yml  performance_test_kraken_memory.py  performance_test_kraken_reservoir.py  pr_body.txt  pr_creation_plan.md  pyproject.toml  pyproject.toml.bak  ruff.toml  (+7 more)
.clinerules/: archimedes.md
.gh_tmp/: protection_before.json  protection_main_before.json  protection_main_restore.json  protection_relaxed.json  protection_relaxed_min.json
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATES/: agent_incident.md  agent_proposal.md  agent_security_review.md  bug_report.md  feature_request.md  general_question.md
.github/workflows/: agent-safety-check.yml  agent-spec-check.yml  ci.yml  functionality-testing.yml  pages-smoke.yml  pages.yml  readout-integration.yml  release-dry-run.yml  release.yml  zenodo-publish.yml
.zenodo/: payload.json
AGENTS/: example_agent_spec.md
AGENTS/TEMPLATES/: agent_spec_template.md
benchmark_results/: ab_results_20251219_175039.json  ab_results_20251219_175042.json  ab_results_20251219_175807.json  ab_results_20251219_180001.json  ab_results_20251219_180115.json  ab_results_20251219_180329.json  ab_results_20251219_184158.json  ab_results_20251219_184251.json  ab_results_20251219_185357.json  expanded_multi_model_plan.md  llama2_background.txt  llama2_timeout_issues.md  multi_model_benchmark_plan.md  personality_benchmark_20251219_183609.json  personality_benchmark_20251219_183817.json  personality_benchmark_20251219_183952.json  personality_benchmark_20251219_184417.json  personality_benchmark_20251219_193030.json  personality_benchmark_20251222_002959.json  personality_results.md  results_matrix.md
benchmark_results/matrix_full_expanded/: analysis.md  checkpoint.json  results.json
benchmark_results/matrix_validation_deep_plan/: analysis.md  checkpoint.json  results.json
benchmarks/: __init__.py  base.py  gsm8k.py  hellaswag.py  humaneval.py  mmlu.py  registry.py
docs/: CHANGELOG.md  CI.md  CONFIGURATION_ARCHITECTURE.md  CONFIG_SUMMARY.md  LLM_INTEGRATION.md  LM_EVAL_GUIDE.md  MATRIX_EVALUATION.md  MATRIX_EVALUATION_TROUBLESHOOTING.md  PAGES.md  REAL_INTEGRATION_TESTING.md  SECURITY_REVIEW.md  TESTING.md  agents.md  api.md  configuration.md  evolution.md  index.html  index.md  kraken_lnn.md  mkdocs.yml  ml_analytics.md  robots.txt  sitemap.xml
docs/api/: README.md  config.yaml  schemas.yaml
docs/whitepaper/: README.md  allele_whitepaper.md  allele_whitepaper.tex  appendix_a_experimental_data.md  phylogenic_whitepaper.md  phylogenic_whitepaper.tex  references.bib  supplemental_materials.md
examples/: basic_usage.py  benchmark_usage.py  config_env_override.py  config_example.py  evolution_example.py  kraken_readout_demo.py
launch_materials/: GUMROAD_LAUNCH_COPY.md  GUMROAD_PRODUCT_DRAFTS.md  LICENSE_TEMPLATES.md  PRODUCTION_READY_REPORT.md  REDDIT_HN_LAUNCH_POST.md  SETUP_COMPLETE.md  SHIP_IT_TONIGHT.md
notebooks/: benchmark_reproduction.ipynb
openspec/: project.md
openspec/changes/evaluate-multi-model-matrix/: IMPLEMENTATION_COMPLETE.md  README.md  VALIDATION_REPORT.md  design.md  proposal.md  tasks.md
scripts/: agent_safety_check.py  analyze_lm_eval_results.py  analyze_matrix_results.py  anomaly_probe.py  benchmark_pipeline.py  check_agent_spec.py  collect_agent_spec_metrics.py  debug_evolve.py  debug_predictive.py  detect_model_sizes.py  direct_ollama_benchmark.py  generate_figures.py  quick_benchmark.sh  run_ab_benchmark.py  run_lm_eval_mass.py  run_matrix_evaluation.py  run_ml_debug.py  run_personality_benchmark.py  smoke_test_matrix.py  update_readme_benchmarks.py  update_readme_matrix.py  update_whitepaper_benchmarks.py
scripts/benchmark_results/matrix_evaluation/: checkpoint.json  results.json
src/: openai.pyi  tiktoken.pyi
src/allele/: __init__.py  agent.py  config.py  evolution.py  evolution_fixed.py  exceptions.py  genome.py  kraken_lnn.py  llm_client.py  llm_exceptions.py  llm_ollama.py  llm_openai.py  types.py
src/allele/observability/: __init__.py  collector.py  config.py  engine.py  integration.py  types.py
src/benchmark/: utils.py
src/phylogenic/: __init__.py  agent.py  config.py  evolution.py  exceptions.py  genome.py  kraken_lnn.py  llm_client.py  llm_exceptions.py  llm_ollama.py  llm_openai.py  py.typed  types.py
src/phylogenic/benchmark/: __init__.py  utils.py
tests/: __init__.py  conftest.py  test_agent_runtime.py  test_allele_genome.py  test_check_agent_spec.py  test_collect_agent_spec_metrics.py  test_config.py  test_config_defaults.py  test_config_env.py  test_evolution_immutability.py  test_evolution_runtime.py  test_genome_runtime.py  test_integration.py  test_kraken_lnn_runtime.py  test_llm_integration.py  test_ml_analytics.py  test_observability_types.py  test_performance.py  test_safety.py  test_stress.py  test_utils.py
tests/bench/: test_kraken_memory.py  test_kraken_scaling.py
tests/integration/: test_matrix_evaluation.py  test_readout_pipeline.py
tests/unit/: test_agent_safety_check.py  test_anomaly_detection_debug.py  test_benchmark_utils.py  test_cot_prompt.py  test_evolution_mutation_and_elitism.py  test_kraken_determinism.py  test_kraken_edgecases.py  test_kraken_readout.py  test_kraken_readout_fallback.py  test_llm_openai_streaming.py  test_llm_openai_unit.py  test_model_detection.py  test_ollama_client.py  test_prompt_delegation.py  test_rate_limiter_event_loop.py
(+88 files in other folders)
