[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "allele"
version = "1.0.2"
description = "Phylogenic AI Agents - Beyond Prompt Engineering. Evolve Genetically Optimized Personalities with Liquid Memory."
readme = "README.md"
license = {text = "AGPL-3.0"}
authors = [
    { name = "Jimmy De Jesus", email = "jimmydejesus1129@gmail.com" },
    { name = "Bravetto AI Systems" }
]
maintainers = [
    { name = "Jimmy De Jesus", email = "jimmydejesus1129@gmail.com" },
    { name = "Bravetto AI Systems" }
]
keywords = [
    "ai",
    "agents",
    "phylogenic",
    "genetic-algorithms",
    "genome",
    "evolution",
    "liquid-neural-networks",
    "llm", "allele",
    "neuromorphic",
    "openai",
    "anthropic",
    "ollama",
    "gpt-4",
    "claude",
    "llama2"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    requires-python = ">=3.9"
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "structlog>=24.0.0",
    "httpx>=0.27.0",  # For async HTTP operations with CLI support
    # Core dependencies
    "uvloop>=0.19.0; sys_platform != 'win32'",
    # LLM Dependencies
    "openai>=1.50.0",
    "anthropic>=0.75.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-benchmark>=4.0.0",
    "pytest-timeout>=2.3.0",
    "pytest-xdist>=3.6.0",
    "memory-profiler>=0.61.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "codespell>=2.3.0",
    "pre-commit>=4.0.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings>=0.25.0",
]
openai = [
    "openai>=1.50.0",
    "tiktoken>=0.8.0",
]
anthropic = [
    "anthropic>=0.75.0",
]
ollama = [
    "ollama>=0.3.0",
]
all = [
    "openai>=1.50.0",
    "anthropic>=0.75.0",
    "ollama>=0.3.0",
]

[project.urls]
Homepage = "https://github.com/bravetto/allele"
Documentation = "https://github.com/bravetto/allele#readme"
Repository = "https://github.com/bravetto/allele"
Issues = "https://github.com/bravetto/allele/issues"
Changelog = "https://github.com/bravetto/allele/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/allele"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/examples",
    "/docs",
    "/README.md",
    "/LICENSE",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=allele",
    "--cov-report=term-missing",
]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.pylint.messages_control]
max-line-length = 88
disable = [
    "C0111",
    "C0103",
    "R0913",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = "numpy.*"
ignore_missing_imports = true
